fix chart row alignment

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -17,9 +17,10 @@
     .charts {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
       align-items: center;
+     
       margin-top: 5%;
+      width: 100vw;
     }
 
     .textContainer {
